[package]
name = "shadow-clone"
version = "0.1.1"
authors = ["Ethan Brierley <ethanboxx@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
description = """
A macro to clone variables into the current scope shadowing old ones.
"""
documentation = "https://docs.rs/shadow-clone"
repository = "https://gitlab.com/efunb/shadow-clone"
edition = "2018"